@@ -9,7 +9,7 @@ import com.fs.starfarer.api.campaign.CampaignFleetAPI;
         static float betaBonus = Global.getSettings().getFloat("AIRetrofits_BetaMulti");
         static float alphaBonus = Global.getSettings().getFloat("AIRetrofits_AlphaMulti");
         static float omegaBonus = Global.getSettings().getFloat("AIRetrofits_OmegaMulti");
-        static String[] AICores = {
+        final private static String[] AICores = {
                 "AIretrofit_SubCommandNode",
                 "gamma_core",
                 "beta_core",
@@ -18,6 +18,23 @@ import com.fs.starfarer.api.campaign.CampaignFleetAPI;
         };
         @Override
         public float getCrewPowerInFleet(CampaignFleetAPI fleet) {
+            return getCrewInFleet(fleet) * getCrewPower(fleet);//super.getCrewPowerInFleet(fleet);
+        }
+        public String getMaxCore(CampaignFleetAPI fleet){
+            if(fleet.getCargo().getCommodityQuantity(AICores[4]) > 0){
+                return Global.getSector().getEconomy().getCommoditySpec(AICores[4]).getName();
+            }else if(fleet.getCargo().getCommodityQuantity(AICores[3]) > 0){
+                return Global.getSector().getEconomy().getCommoditySpec(AICores[3]).getName();
+            }else if(fleet.getCargo().getCommodityQuantity(AICores[2]) > 0){
+                return Global.getSector().getEconomy().getCommoditySpec(AICores[2]).getName();
+            }else if(fleet.getCargo().getCommodityQuantity(AICores[1]) > 0){
+                return Global.getSector().getEconomy().getCommoditySpec(AICores[1]).getName();
+            }else if(fleet.getCargo().getCommodityQuantity(AICores[0]) > 0){
+                return Global.getSector().getEconomy().getCommoditySpec(AICores[0]).getName();
+            }
+            return "no AI-Core or SubCommandNode's";
+        }
+        public float getCorePower(CampaignFleetAPI fleet){
             float multi = baseBonus;
             if(fleet.getCargo().getCommodityQuantity(AICores[4]) > 0){
                 multi = omegaBonus;
@@ -30,6 +47,10 @@ import com.fs.starfarer.api.campaign.CampaignFleetAPI;
             }else if(fleet.getCargo().getCommodityQuantity(AICores[0]) > 0){
                 multi = commandBonus;
             }
-            return getCrewInFleet(fleet) * crewPower * multi;//super.getCrewPowerInFleet(fleet);
+            return multi;
+        }
+        public float getCrewPower(CampaignFleetAPI fleet){
+            float multi = getCorePower(fleet);
+            return crewPower * multi;
         }
     }
