@@ -5,6 +5,23 @@ ask questions on forum (done. wait for reply):
     how to change a items images (like crew and marries) as it changes in quantity
 
 images:
+    options:
+        1) get someone to do it for me.
+            known options are:
+            Sophie. : friend. might be willing to help
+            https://www.artstation.com/antonjuntunen : the one who drew things for industrial evolution.
+            AI generated images: this might be hard, but they do draw hell of a good images,
+
+        2) do it myself.
+            i like doing things myself, for myself. its just -better- in my opining.
+            but my art... i could do it by hand, but in the style required? not a chance.
+            maybe i could, but i would have to start at the beginning.
+            i would need to start not with the computer, but with a pencil and paper.
+            mmmmmmmmmmmMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMjbghvhnm
+            do i want this done myself? in part yet. the idea of making art for this project gets me quite happy. i want to do it.
+            but im no good? what the hell has that ever stopped me? not now, not ever! i will rain supreme!
+            there is a lot of it to do however
+
     start to work on images. and what they are.
     i want to open with the salvage, survey, and combat robots, then item, then industrys.
     this is -required- to be finished.
