@@ -1,8 +1,13 @@
 changelog for all my changes as i make them so i dont forget again.
 v0.7.5:
 save compatible with 0.7.3+
-background work:
-    started work on the last missing market buildings.
+    new:
+        added a way to see what power a given robot has, so no more guessing on why they are so weak today.
+    fixes:
+        removed a testing crewReplacer crew
+    background work:
+        started work on the last missing market buildings.
+
 v0.7.4.2:
 save compatible with 0.7.3+
 fixes:
